--- a/ws/gl-sport-tracker/yo/app/index.html
+++ b/ws/gl-sport-tracker/yo/app/index.html
@@ -23,7 +23,7 @@
     
     <div class="container" ng-controller="MainCtrl">
 		<nav class="navbar navbar-fixed-top navbar-inverse" role="navigation">
-			<a href="index" alt="Home">
+			<a href="#accueil" alt="Home">
 				<img class="logo" src="images/logo.png" alt="Logo" />
 			</a>
 			<a href="" ng-click="deco()" class="btn btn-default navbar-btn pull-right logout">Déconnexion</a>
@@ -40,7 +40,6 @@
 		<section id="main-content" ng-view>
 			Nothing loaded ... :'(
 		</section>
-    
     </div>
 
 
