--- a/ws/gl-sport-tracker/yo/app/index.html
+++ b/ws/gl-sport-tracker/yo/app/index.html
@@ -34,7 +34,8 @@
 				<a href="#accueil" class="list-group-item" ng-class="{'active': page.page() == 'accueil'}">Accueil</a> 
 				<a href="#profil" class="list-group-item" ng-class="{'active': page.page() == 'profil'}">Profil</a>
 				<a href="#session" class="list-group-item" ng-class="{'active': page.page() == 'sessions'}">Mes sessions</a>
-				<a href="#amis" class="list-group-item" ng-class="{'active': page.page() == 'amis'}">Amis</a> 
+				<a href="#amis" class="list-group-item" ng-class="{'active': page.page() == 'amis'}">Amis</a>				
+				<a href="#about" class="list-group-item">A propos</a>  
 			</div>
 		</aside>
 		<section id="main-content" ng-view>
